--- a/app/src/main/res/layout/fragment_search_map.xml
+++ b/app/src/main/res/layout/fragment_search_map.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <!-- MapView를 배치할 뷰그룹   -->
+    <RelativeLayout
+        android:id="@+id/container_mapview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="MAP FRAGMENT"
-        android:gravity="center"/>
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
