--- a/app/src/main/res/layout/recycler_item_list_fragment.xml
+++ b/app/src/main/res/layout/recycler_item_list_fragment.xml
@@ -44,9 +44,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:padding="4dp"
-            android:textStyle="bold"
+            android:text="distance"
             android:textColor="@color/brand"
-            android:text="distance"/>
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
